--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".userProfile"
+            android:exported="true" />
+        <activity
+            android:name=".userBACInfo"
+            android:exported="true" />
+        <activity
             android:name=".welcomePage"
             android:exported="true" />
         <activity
