GamesAvailable is broken, but added a bunch of new classes. Trying to work on pulling the data- Dani

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".gamesAvailable"
+            android:exported="true" />
+        <activity
             android:name=".userProfile"
             android:exported="true" />
         <activity
