--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.BuzzTenderRoweNguyen.BuzzTender">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--
+             The API key for Google Maps-based APIs.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBpMCJOBaCdGCwDK2emE8cCkl-HraibUZA" />
+        <activity
+            android:name=".locationPage"
+            android:exported="false"
+            android:parentActivityName=".welcomePage">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".welcomePage" />
+        </activity>
+        <activity
+            android:name=".OnDemandActivity"
+            android:exported="false"
+            android:parentActivityName=".locationPage">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".locationPage" />
+        </activity>
+        <activity
+            android:name=".MapsActivity"
+            android:exported="false" />
         <activity
             android:name=".specificGame"
             android:exported="true"
